crates/alder-parse/src/snapshots/alder_parse__style__tests__error_dimension_leading_zero.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 007px }"
---
Style(
    Dimension(
        NoLeadingZero,
        1,
        19,
    ),
    1,
    1,
)
