crates/alder-parse/src/snapshots/alder_parse__style__tests__error_dimension_trailing_dot.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 1.px }"
---
Style(
    Dimension(
        Dot,
        1,
        19,
    ),
    1,
    1,
)
