crates/alder-parse/src/snapshots/alder_parse__style__tests__error_double_comma.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 16px,, color: red }"
---
Style(
    Key(
        1,
        23,
    ),
    1,
    1,
)
