crates/alder-parse/src/snapshots/alder_parse__style__tests__error_entry_separator.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 16px 8px }"
---
Style(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 22,
            },
            unexpected: Position {
                line: 1,
                column: 23,
            },
        },
    ),
    1,
    1,
)
