crates/alder-parse/src/snapshots/alder_parse__style__tests__error_key_number.snap
---
source: crates/alder-parse/src/style.rs
description: "style { 16: px }"
---
Style(
    Key(
        1,
        9,
    ),
    1,
    1,
)
