crates/alder-parse/src/snapshots/alder_parse__style__tests__error_key_reserved.snap
---
source: crates/alder-parse/src/style.rs
description: "style { type: 1 }"
---
Style(
    Key(
        1,
        9,
    ),
    1,
    1,
)
