crates/alder-parse/src/snapshots/alder_parse__style__tests__error_key_string_endless.snap
---
source: crates/alder-parse/src/style.rs
description: "style { \":hover: { color: red } }"
---
Style(
    KeyString(
        Endless,
        1,
        34,
    ),
    1,
    1,
)
