crates/alder-parse/src/snapshots/alder_parse__style__tests__error_key_uppercase.snap
---
source: crates/alder-parse/src/style.rs
description: "style { Padding: 16px }"
---
Style(
    Key(
        1,
        9,
    ),
    1,
    1,
)
