crates/alder-parse/src/snapshots/alder_parse__style__tests__error_missing_colon.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding 16px }"
---
Style(
    Colon(
        1,
        17,
    ),
    1,
    1,
)
