crates/alder-parse/src/snapshots/alder_parse__style__tests__error_missing_comma.snap
---
source: crates/alder-parse/src/style.rs
description: "style {\n    padding: 16px\n    color: red\n}\n"
---
Style(
    End(
        3,
        5,
    ),
    1,
    1,
)
