crates/alder-parse/src/snapshots/alder_parse__style__tests__error_missing_value.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: }"
---
Style(
    Value(
        Start(
            1,
            18,
        ),
        1,
        18,
    ),
    1,
    1,
)
